yaml/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      app: node-sample-helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app: node-sample-helloworld
    spec:
      containers:
      - name: main
        image: bmusuko/user-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
