yaml/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # Target URI where the traffic must be redirected
    # More info: https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/rewrite/README.md
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: sejutacita-test
spec:
  rules:
    # Uncomment the below to only allow traffic from this domain and route based on it
    # - host: my-host # your domain name with A record pointing to the nginx-ingress-controller IP
    - http:
        paths:
        - path: /user # Everything on this path will be redirected to the rewrite-target
          backend:
            serviceName: user-service # the exposed svc name and port
            servicePort: 8080
        - path: /auth
          backend:
            serviceName: auth-service
            servicePort: 8081
